// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:service 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-required"
          data-amis-name="tpl"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  模板
                </span>
              </span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-inline"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select"
              role="combobox"
              tabindex="0"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-valueWrap"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-value"
                >
                  模板1
                </div>
              </div>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-arrow"
              >
                <icon-mock
                  class="icon icon-right-arrow-bold"
                  icon="right-arrow-bold"
                />
              </span>
            </div>
          </div>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service m-t"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-required"
            data-amis-name="dy_1"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    动态字段1
                  </span>
                </span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                >
                  *
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="dy_1"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="dy_2"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    动态字段2
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="dy_2"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`form:service:remoteData 1`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
        data-amis-name="child-a"
        data-role="form-item"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
          >
            <input
              autocomplete="off"
              class=""
              name="child-a"
              placeholder=""
              size="10"
              type="text"
              value="123"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-role="form-item"
    >
      <button
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
        type="submit"
      >
        <span>
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`form:service:remoteSchmea+data 1`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
        data-amis-name="child-a"
        data-role="form-item"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
          >
            <input
              autocomplete="off"
              class=""
              name="child-a"
              placeholder=""
              size="10"
              type="text"
              value="123"
            />
          </div>
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
        data-amis-name="child-b"
        data-role="form-item"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
          >
            <input
              autocomplete="off"
              class=""
              name="child-b"
              placeholder=""
              size="10"
              type="text"
              value="344"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-role="form-item"
    >
      <button
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
        type="submit"
      >
        <span>
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`form:service:super-remoteData 1`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
        data-amis-name="child-a"
        data-role="form-item"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
          >
            <input
              autocomplete="off"
              class=""
              name="child-a"
              placeholder=""
              size="10"
              type="text"
              value="123"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-role="form-item"
    >
      <button
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
        type="submit"
      >
        <span>
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;
